# image-tracking

./: CMakeLists.txt  README.md  package.xml
include/: .WaypointPubfromKey.h.swp  WaypointPubfromKey.h  boxoperator.h  dbscan.h  dbscan.h.autosave  optimization_funs.h  waypoint_proposal.h  waypoint_proposal.h.autosave  waypoint_proposal_.h
launch/: .image_tracking.launch.swl  .image_tracking.launch.swm  .image_tracking.launch.swn  .image_tracking.launch.swo  .image_tracking.launch.swp  image_tracking.launch  octomap_demo.launch
msg/: ProposalBox.msg  ProposalBoxPath.msg  ProposalBoxes.msg  ProposalRay.msg  ProposalRays.msg
rviz/: image_tracking.rviz  octomap_demo.rviz
scripts/: .keypress.py.swo  .keypress.py.swp  keypress.py  pathManager.py  rospy
src/: .waypoint_proposal.cpp.swp  a.out  find_max_rect_in_matrix.cpp  optimization_funcs.cpp  smoothing_filter.cpp  waypoint_proposal.cpp  waypoint_proposal.cpp.autosave  waypoint_proposal_.cpp  waypoint_proposal_node.cpp  waypoint_proposal_node_.cpp  waypoint_publisher_from_key.cpp
srv/: CastQuery.srv
