<?xml version="1.0"?>
<package>
  <name>image_tracking</name>
  <version>0.0.0</version>
  <description>The image_tracking package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jbs@todo.todo">jbs</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_plugins</build_depend>
  <build_depend>rotors_gazebo_plugins</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
 <build_depend>octomap</build_depend>
 <run_depend>octomap</run_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>rotors_gazebo_plugins</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->

</package>
